# security-labs

./: .gitignore
Lab-2/Lab-2/: FeistelNet.h  main.cpp
Lab-2/Lab-2.xcodeproj/: project.pbxproj
Lab-2/Lab-2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Lab-2/Lab-2.xcodeproj/project.xcworkspace/xcshareddata/: Lab-2.xcscmblueprint
Lab-2/Lab-2.xcodeproj/project.xcworkspace/xcuserdata/morozov.xcuserdatad/: UserInterfaceState.xcuserstate
Lab-2/Lab-2.xcodeproj/project.xcworkspace/xcuserdata/morozov.xcuserdatad/xcdebugger/: Expressions.xcexplist
Lab-2/Lab-2.xcodeproj/xcuserdata/morozov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Lab-2/Lab-2.xcodeproj/xcuserdata/morozov.xcuserdatad/xcschemes/: Lab-2.xcscheme  xcschememanagement.plist
hide-image-part/: CMakeLists.txt  main.cpp
image_authenticity/: Cargo.toml
stegano-detector/: CMakeLists.txt  main.cpp
